# kaho_instance_parser

./: Cargo.toml
instances/: Hospital1-Emergency-Absence.xml  Hospital1-Emergency-Normal.xml  Hospital1-Emergency-Overload.xml  Hospital1-Geriatrics-Absence.xml  Hospital1-Geriatrics-Normal.xml  Hospital1-Geriatrics-Overload.xml  Hospital1-Meal Preparation-Absence.xml  Hospital1-Meal Preparation-Normal.xml  Hospital1-Meal Preparation-Overload.xml  Hospital1-Psychiatry-Absence.xml  Hospital1-Psychiatry-Normal.xml  Hospital1-Psychiatry-Overload.xml  Hospital1-Reception-Absence.xml  Hospital1-Reception-Normal.xml  Hospital1-Reception-Overload.xml  Hospital2-Palliative Care-Absence.xml  Hospital2-Palliative Care-Normal.xml  Hospital2-Palliative Care-Overload.xml
src/: main.rs
